// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-c5xwgs-0 bSApLj"
>
  <h1
    class="profiles__Title-sc-c5xwgs-1 cyTjqb"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-c5xwgs-2 llJENa"
  >
    <li
      class="profiles__Item-sc-c5xwgs-5 lgkQtg"
    >
      <img
        class="profiles__Picture-sc-c5xwgs-4 kRckGp"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-c5xwgs-3 bWQXfy"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-c5xwgs-0 bSApLj"
>
  <h1
    class="profiles__Title-sc-c5xwgs-1 cyTjqb"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-c5xwgs-2 llJENa"
  >
    <li
      class="profiles__Item-sc-c5xwgs-5 lgkQtg"
    >
      <img
        class="profiles__Picture-sc-c5xwgs-4 kRckGp"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-c5xwgs-3 bWQXfy"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
